Functions and graphs of question 2

--- a/notebooks/pregunta2.ipynb
+++ b/notebooks/pregunta2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,54 +71,119 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "def probabilidad_10_imagenes_en_proximo_minuto(tasa_promedio):\n",
+    "    \"\"\"\n",
+    "    Calcula la probabilidad de recibir exactamente 10 imágenes en el próximo minuto.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "\n",
+    "    Retorna:\n",
+    "    float: La probabilidad de recibir exactamente 10 imágenes en el próximo minuto.\n",
+    "    \"\"\"\n",
+    "    prob_10_imagenes = poisson.pmf(10, tasa_promedio)\n",
+    "    return prob_10_imagenes\n",
+    "\n",
+    "def grafico_poisson_10_imagenes(tasa_promedio):\n",
+    "    \"\"\"\n",
+    "    Genera un gráfico de la distribución de Poisson para recibir exactamente 10 imágenes en el próximo minuto.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "    \"\"\"\n",
+    "    x = np.arange(0, 40)\n",
+    "    prob_10_imagenes = poisson.pmf(x, tasa_promedio)\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.bar(x, prob_10_imagenes, color='blue', alpha=0.7)\n",
+    "    plt.title('Distribución de Poisson para recibir exactamente 10 imágenes en el próximo minuto')\n",
+    "    plt.xlabel('Número de imágenes')\n",
+    "    plt.ylabel('Probabilidad')\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    plt.text(x[10], prob_10_imagenes[10], f'{prob_10_imagenes[10]:.4f}', ha='center', va='bottom', color='red')\n",
+    "    plt.axhline(y=prob_10_imagenes[10], color='red', linestyle='--', linewidth=2, label='y = 2')\n",
+    "    plt.show()\n",
+    "\n",
+    "def probabilidad_1_imagen_en_proximo_minuto(tasa_promedio):\n",
+    "    \"\"\"\n",
+    "    Calcula la probabilidad de recibir una imagen en el próximo minuto.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "\n",
+    "    Retorna:\n",
+    "    float: La probabilidad de recibir una imagen en el próximo minuto.\n",
+    "    \"\"\"\n",
+    "    prob_1_imagen = poisson.pmf(1, tasa_promedio)\n",
+    "    return prob_1_imagen\n",
+    "\n",
+    "def probabilidad_30_imagenes_proximos_5_minutos(tasa_promedio, tiempo_5_minutos):\n",
+    "    \"\"\"\n",
+    "    Calcula la probabilidad de recibir al menos 30 imágenes en los próximos 5 minutos.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "    - tiempo_5_minutos (int): Tiempo en minutos para el cual se calcula la probabilidad.\n",
+    "\n",
+    "    Retorna:\n",
+    "    float: La probabilidad de recibir al menos 30 imágenes en los próximos 5 minutos.\n",
+    "    \"\"\"\n",
+    "    prob_30_imagenes = 1 - poisson.cdf(29, tasa_promedio * tiempo_5_minutos)\n",
+    "    return prob_30_imagenes\n",
+    "\n",
+    "def grafico_poisson_30_imagenes_proximos_5_minutos(tasa_promedio, tiempo_5_minutos):\n",
+    "    \"\"\"\n",
+    "    Genera un gráfico de la distribución de Poisson para recibir al menos 30 imágenes en los próximos 5 minutos.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "    - tiempo_5_minutos (int): Tiempo en minutos para el cual se calcula la probabilidad.\n",
+    "    \"\"\"\n",
+    "    x = np.arange(0, 40)\n",
+    "    prob_30_imagenes = 1 - poisson.cdf(x, tasa_promedio * tiempo_5_minutos)\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.bar(x, prob_30_imagenes, color='green', alpha=0.7)\n",
+    "    plt.title('Distribución de Poisson para recibir al menos 30 imágenes en los próximos 5 minutos')\n",
+    "    plt.xlabel('Número de imágenes')\n",
+    "    plt.ylabel('Probabilidad')\n",
+    "    plt.text(x[29], prob_30_imagenes[29], f'{prob_30_imagenes[29]:.4f}', ha='center', va='bottom', color='red')\n",
+    "    plt.grid(True)\n",
+    "    plt.axhline(y=prob_30_imagenes[29], color='red', linestyle='--', linewidth=2, label='y = 2')\n",
+    "    plt.show()\n",
+    "\n",
+    "def probabilidad_150_imagenes_30_minutos(total_imagenes_30_minutos, tasa_promedio, tiempo_30_minutos):\n",
+    "    \"\"\"\n",
+    "    Calcula la probabilidad de recibir un total de 150 imágenes o más durante 30 minutos.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - total_imagenes_30_minutos (int): Total de imágenes en 30 minutos.\n",
+    "    - tasa_promedio (float): Tasa promedio de llegada de imágenes.\n",
+    "    - tiempo_30_minutos (int): Duración de 30 minutos.\n",
+    "\n",
+    "    Retorna:\n",
+    "    float: La probabilidad de recibir un total de 150 imágenes o más durante 30 minutos.\n",
+    "    \"\"\"\n",
+    "    prob_150_imagenes = 1 - poisson.cdf(total_imagenes_30_minutos - 1, tasa_promedio * tiempo_30_minutos)\n",
+    "    return prob_150_imagenes\n",
+    "\n",
     "# Parámetros del problema\n",
     "tasa_promedio = 5\n",
     "tiempo_5_minutos = 5\n",
     "tiempo_30_minutos = 30\n",
     "total_imagenes_30_minutos = 150\n",
     "\n",
-    "# Valores para el eje x\n",
-    "x = np.arange(0, 40)\n",
+    "# Outputs\n",
+    "print(\"1. Probabilidad de recibir exactamente 10 imágenes en el próximo minuto:\", probabilidad_10_imagenes_en_proximo_minuto(tasa_promedio))\n",
+    "grafico_poisson_10_imagenes(tasa_promedio)\n",
     "\n",
-    "# 1. Probabilidad de recibir exactamente 10 imágenes en el próximo minuto\n",
-    "prob_10_imagenes = poisson.pmf(10, tasa_promedio)\n",
-    "print(\"1. Probabilidad de recibir exactamente 10 imágenes en el próximo minuto:\", prob_10_imagenes)\n",
-    "prob_10_imagenes = poisson.pmf(x, tasa_promedio)\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(x, prob_10_imagenes, color='blue', alpha=0.7)\n",
-    "plt.title('Distribución de Poisson para recibir exactamente 10 imágenes en el próximo minuto')\n",
-    "plt.xlabel('Número de imágenes')\n",
-    "plt.ylabel('Probabilidad')\n",
-    "plt.grid(True)\n",
-    "# Agregar etiqueta en la columna\n",
-    "plt.text(x[10], prob_10_imagenes[10], f'{prob_10_imagenes[10]:.4f}', ha='center', va='bottom', color='red')\n",
-    "# Agregar recta horizontal\n",
-    "plt.axhline(y=prob_10_imagenes[10], color='red', linestyle='--', linewidth=2, label='y = 2')\n",
-    "plt.show()\n",
+    "print(\"2. Probabilidad de recibir una imagen en el próximo minuto:\", probabilidad_1_imagen_en_proximo_minuto(tasa_promedio))\n",
     "\n",
-    "# 2. Probabilidad de recibir una imagen en el próximo minuto\n",
-    "prob_1_imagen = poisson.pmf(1, tasa_promedio)\n",
-    "print(\"2. Probabilidad de recibir una imagen en el próximo minuto:\", prob_1_imagen)\n",
+    "print(\"3. Probabilidad de recibir al menos 30 imágenes en los próximos 5 minutos:\", probabilidad_30_imagenes_proximos_5_minutos(tasa_promedio, tiempo_5_minutos))\n",
+    "grafico_poisson_30_imagenes_proximos_5_minutos(tasa_promedio, tiempo_5_minutos)\n",
     "\n",
-    "# 3. Probabilidad de recibir al menos 30 imágenes en los próximos 5 minutos\n",
-    "prob_30_imagenes = 1 - poisson.cdf(29, tasa_promedio * tiempo_5_minutos)\n",
-    "print(\"3. Probabilidad de recibir al menos 30 imágenes en los próximos 5 minutos:\", prob_30_imagenes)\n",
-    "prob_30_imagenes = 1 - poisson.cdf(x, tasa_promedio * tiempo_5_minutos)\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(x, prob_30_imagenes, color='green', alpha=0.7)\n",
-    "plt.title('Distribución de Poisson para recibir al menos 30 imágenes en los próximos 5 minutos')\n",
-    "plt.xlabel('Número de imágenes')\n",
-    "plt.ylabel('Probabilidad')\n",
-    "# Agregar etiqueta en la columna\n",
-    "plt.text(x[29], prob_30_imagenes[29], f'{prob_30_imagenes[29]:.4f}', ha='center', va='bottom', color='red')\n",
-    "plt.grid(True)\n",
-    "# Agregar recta horizontal\n",
-    "plt.axhline(y=prob_30_imagenes[29], color='red', linestyle='--', linewidth=2, label='y = 2')\n",
-    "plt.show()\n",
-    "\n",
-    "# 4. Probabilidad de recibir un total de 150 imágenes o más durante 30 minutos\n",
-    "prob_150_imagenes = 1 - poisson.cdf(total_imagenes_30_minutos - 1, tasa_promedio * tiempo_30_minutos)\n",
-    "print(\"4. Probabilidad de recibir un total de 150 imágenes o más durante 30 minutos:\", prob_150_imagenes)\n"
+    "print(\"4. Probabilidad de recibir un total de 150 imágenes o más durante 30 minutos:\", probabilidad_150_imagenes_30_minutos(total_imagenes_30_minutos, tasa_promedio, tiempo_30_minutos))\n"
    ]
   }
  ],
