--- a/ReporteFinal.ipynb
+++ b/ReporteFinal.ipynb
@@ -11,14 +11,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tabulate in c:\\users\\dcaji\\desktop\\distribuciones-de-probabilidad\\.venv\\lib\\site-packages (0.9.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install tabulate\n",
+    "\n",
+    "import tabulate\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import binom, expon, poisson\n",
+    "from scipy.stats import binom, expon, poisson, norm\n",
     "\n",
-    "df = pd.read_csv('./data/Web_Server_Requests_G.csv')"
+    "\n",
+    "#df = pd.read_csv('./data/Web_Server_Requests_G.csv')\n",
+    "url = 'https://raw.githubusercontent.com/DCajiao/Distribuciones-de-Probabilidad/main/data/Web_Server_Requests_G.csv?token=GHSAT0AAAAAACRAW2Q6NZNNCWHY6RQI55ZSZQ6UEUQ'\n",
+    "df = pd.read_csv(url)"
    ]
   }
  ],
@@ -38,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
