--- a/notebooks/pregunta4.ipynb
+++ b/notebooks/pregunta4.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/Web_Server_Requests_G.csv')"
+    "url = 'https://raw.githubusercontent.com/DCajiao/Distribuciones-de-Probabilidad/main/data/Web_Server_Requests_G.csv?token=GHSAT0AAAAAACRAW2Q6NZNNCWHY6RQI55ZSZQ6UEUQ'\n",
+    "df = pd.read_csv(url)"
    ]
   }
  ],
@@ -48,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
