Question 3 pending to update

--- a/ReporteFinal.ipynb
+++ b/ReporteFinal.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tabulate in c:\\users\\dcaji\\desktop\\distribuciones-de-probabilidad\\.venv\\lib\\site-packages (0.9.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install tabulate\n",
     "\n",
@@ -30,8 +21,11 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import binom, expon, poisson, norm\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/DCajiao/Distribuciones-de-Probabilidad/main/data/Web_Server_Requests_G.csv?token=GHSAT0AAAAAACRAW2Q6NZNNCWHY6RQI55ZSZQ6UEUQ'\n",
-    "df = pd.read_csv(url)"
+    "df = pd.read_csv(\"data/Web_Server_Requests_G.csv\")\n",
+    "\n",
+    "#Activar esto cuando el repo sea público para poderlo cargar en Colab\n",
+    "#url = 'https://raw.githubusercontent.com/DCajiao/Distribuciones-de-Probabilidad/main/data/Web_Server_Requests_G.csv'\n",
+    "#df = pd.read_csv(url)"
    ]
   }
  ],
