Final Questions Commit

--- a/ReporteFinal.ipynb
+++ b/ReporteFinal.ipynb
@@ -19,13 +19,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import binom, expon, poisson, norm\n",
+    "from scipy.stats import binom, expon, poisson, norm, gamma\n",
     "\n",
-    "df = pd.read_csv(\"data/Web_Server_Requests_G.csv\")\n",
-    "\n",
-    "#Activar esto cuando el repo sea público para poderlo cargar en Colab\n",
+    "#Cargar los datos desde el repositorio de GitHub\n",
     "#url = 'https://raw.githubusercontent.com/DCajiao/Distribuciones-de-Probabilidad/main/data/Web_Server_Requests_G.csv'\n",
-    "#df = pd.read_csv(url)"
+    "#df = pd.read_csv(url)\n",
+    "df = pd.read_csv(\"data/Web_Server_Requests_G.csv\")"
    ]
   }
  ],
@@ -45,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
