--- a/notebooks/pregunta2.ipynb
+++ b/notebooks/pregunta2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suponga un sistema de procesamiento de imágenes utilizado en un proyecto de inteligencia artificial para el reconocimiento de objetos en videos de vigilancia. Este sistema recibe continuamente flujos de imágenes de múltiples cámaras de seguridad. La tasa de llegada de imágenes por minuto sigue una distribución de Poisson con una tasa promedio de 5 imágenes por minuto. La precisión del reconocimiento de objetos depende en gran medida de la cantidad de imágenes procesadas por minuto. @David Cajiao  \n",
+    "Suponga un sistema de procesamiento de imágenes utilizado en un proyecto de inteligencia artificial para el reconocimiento de objetos en videos de vigilancia. Este sistema recibe continuamente flujos de imágenes de múltiples cámaras de seguridad. La tasa de llegada de imágenes por minuto sigue una distribución de Poisson con una tasa promedio de 5 imágenes por minuto. La precisión del reconocimiento de objetos depende en gran medida de la cantidad de imágenes procesadas por minuto. \n",
     "1.  ¿Cuál es la probabilidad de que el sistema de procesamiento de imágenes reciba exactamente 10 imágenes en el próximo minuto?\n",
     "2.  ¿Cuál es la probabilidad de que el sistema de procesamiento de imágenes reciba una imagen en el próximo minuto?\n",
     "3.  ¿Cuál es la probabilidad de que el sistema de procesamiento de imágenes reciba al menos 30 imágenes en los próximos 5 minutos?\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
